Listas ordenadas y desordenadas

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <p>Usualmente, el personal capacitado podrá trabajar en hospitales y centros de salud, empresas <strong><em>fabricantes en dispositivos médicos</em></strong>, centros de investigación y universidades. Además de rganismos gubernamentales.</p>
 <h3>LOREM</h3>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ullam quisquam! Nobis animi corrupti quam ea eveniet, fugiat nesciunt eos amet, qui eum illum asperiores error libero perferendis! Voluptates, ipsum.
+<a href="list.html">list</a>
 </body>
 </html>
